--- a/_config.yml
+++ b/_config.yml
@@ -4,10 +4,10 @@
 # ---------------------------------------------------------------
 
 # Site
-title: 采菊东篱下
-subtitle: 悠然见南山
+title: Simpleyyt
+subtitle: Yitao's Blog
 description: Too simple, sometimes naive.
-author: tanfeng
+author: Simpleyyt
 # Support language: de, en, fr-FR, id, ja, ko, pt-BR, pt, ru, zh-Hans, zh-hk, zh-tw
 language: zh-Hans
 date_format: '%Y-%m-%d'
